# Subnautica2-Mod-Menu

./: CMakeLists.txt  README.md
5.6.1-113109+++Project+SN2-Release-Hotfix-Live-Subnautica2/CppSDK/: NameCollisions.inl  SDK.hpp
5.6.1-113109+++Project+SN2-Release-Hotfix-Live-Subnautica2/CppSDK/SDK/: ABP_AnemoneCrab_classes.hpp  ABP_AnemoneCrab_functions.cpp  ABP_AnemoneCrab_parameters.hpp  ABP_AnemoneCrab_structs.hpp  ABP_Biobed_classes.hpp  ABP_Biobed_functions.cpp  ABP_Biobed_parameters.hpp  ABP_Biobed_structs.hpp  ABP_BlightDamagePoint_01_classes.hpp  ABP_BlightDamagePoint_01_functions.cpp  ABP_BlightDamagePoint_01_parameters.hpp  ABP_BlightDamagePoint_01_structs.hpp  ABP_BlightParasite_classes.hpp  ABP_BlightParasite_functions.cpp  ABP_BlightParasite_parameters.hpp  ABP_BlightParasite_structs.hpp  ABP_Clamthulu_Nerve_01_classes.hpp  ABP_Clamthulu_Nerve_01_functions.cpp  ABP_Clamthulu_Nerve_01_parameters.hpp  ABP_Clamthulu_Nerve_01_structs.hpp  ABP_Coralcrab_01_classes.hpp  ABP_Coralcrab_01_functions.cpp  ABP_Coralcrab_01_parameters.hpp  ABP_Coralcrab_01_structs.hpp  ABP_ElectricGeordie_01_classes.hpp  ABP_ElectricGeordie_01_functions.cpp  ABP_ElectricGeordie_01_parameters.hpp  ABP_ElectricGeordie_01_structs.hpp  ABP_Fabricator_classes.hpp  ABP_Fabricator_functions.cpp  (+3508 more)
5.6.1-113109+++Project+SN2-Release-Hotfix-Live-Subnautica2/Dumpspace/: ClassesInfo.json  EnumsInfo.json  OffsetsInfo.json  StructsInfo.json
5.6.1-113109+++Project+SN2-Release-Hotfix-Live-Subnautica2/IDAMappings/: 5.6.1-113109+++Project+SN2-Release-Hotfix-Live-Subnautica2.idmap
5.6.1-113109+++Project+SN2-Release-Hotfix-Live-Subnautica2/Mappings/: 5.6.1-113109+++Project+SN2-Release-Hotfix-Live-Subnautica2.usmap
src/: main.cpp
src/core/: config.cpp  config.h  hooks.cpp  hooks.h  sdk.cpp  sdk.h  sdk2.cpp
src/features/: battery.cpp  battery.h  esp.cpp  esp.h  godmode.cpp  godmode.h  items.cpp  items.h  noclip.cpp  noclip.h  oxygen.cpp  oxygen.h  speed.cpp  speed.h  vehicle_spawner.cpp  vehicle_spawner.h
src/ui/: menu.cpp  menu.h  renderer.cpp  renderer.h
src/utils/: helpers.cpp  helpers.h
